--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.G1_OrderFoodOnline"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AddAddressActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AddressListActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.OrderHistoryActivity"
             android:exported="false" />
         <activity
