--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:exported="false" />
         <activity
             android:name=".activities.AddressListActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.G1_OrderFoodOnline.NoActionBar" />
         <activity
             android:name=".activities.OrderHistoryActivity"
             android:exported="false" />
@@ -43,15 +44,16 @@
             android:theme="@style/Theme.G1_OrderFoodOnline.NoActionBar" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="false"
-            android:label="@string/app_name" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.FoodDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.G1_OrderFoodOnline.NoActionBar" />
-        <activity
-            android:name=".activities.CartActivity"
-            android:exported="false" />
         <activity
             android:name=".activities.CheckoutActivity"
             android:exported="false" />
